--- a/UI/pages/all_users.html
+++ b/UI/pages/all_users.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>SendIT</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
  <div class="dropdown">
     <button class="dropbtn">Admin: Wagole wise
       <i class="fa fa-caret-down"></i>
