--- a/UI/pages/new_delivery.html
+++ b/UI/pages/new_delivery.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>SendIT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
  <div class="dropdown">
     <button class="dropbtn">Delivery Order Menu
       <i class="fa fa-caret-down"></i>
@@ -19,15 +19,18 @@
       <hr/>
 			<a href="index.html">Logout</a>
     </div>
+  </div>
 
-  </div>
-  <a href="#contact">Hello: Refuge Wise</a>
-  </div>
-  
+      <a href="#contact">Hello: Refuge Wise</a>
+      <a href="delivery_price.html">Prices</a>
+      
+
+</div>
+
 <div class="contianer">
   <div class="new_delivery">
     <h1>New Delivery Orders</h1>
-    <form id='post' action="" method='post'>
+    <form action="new_delivery.html">
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
       <input type="number" placeholder="Weight" required>
@@ -37,6 +40,5 @@
   </div>
 </div>
 
-  <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
 </html> 
