--- a/UI/pages/register.html
+++ b/UI/pages/register.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title>SendIT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
   	<a href="login.html">Login</a>
   	<a href="register.html">Register</a>
-          <a href="index.html">Home</a>  
+          <a href="../../index.html">Home</a>  
 
 </div>
 <div class="outer">
