--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>SendIT</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/home.js"></script>
+  <link rel="stylesheet" type="text/css" href="./UI/css/style.css">
+  <script src="./UI/js/home.js"></script>
 </head>
 <body onload="fetchIndex()">
   
   <div class="top">
-<img src="img/delivery.png">
-  <a href="admin_login.html">Admin</a>
-  <a href="login.html">Login</a>
+<img src="./UI/img/delivery.png">
+  <a href="./UI/pages/admin_login.html">Admin</a>
+  <a href="./UI/pages/login.html">Login</a>
 
-   <a href="register.html">Register</a>  
+   <a href="./UI/pages/register.html">Register</a>  
       <a href="index.html">Home</a>  
 
 
@@ -25,7 +25,7 @@
    <p id="output"></p>
 
    <p>We deliver parcels in different destinations, as fast as possible</p>
-      <a href="register.html">Signup & send Your Parcels Now</a>  
+      <a href="./UI/pages/register.html">Signup & send Your Parcels Now</a>  
 </div>
 <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
