--- a/UI/pages/admin_login.html
+++ b/UI/pages/admin_login.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>SendIT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
   <a href="login.html">Login</a>
   <a href="register.html">Register</a>
   </div> 
