--- a/UI/pages/dashboard.html
+++ b/UI/pages/dashboard.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>SendIT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
  <div class="dropdown">
     <button class="dropbtn">Delivery Order Menu
       <i class="fa fa-caret-down"></i>
@@ -17,20 +17,17 @@
       <a href="my_order.html">My Orders</a>
       <a href="history-delivery.html">Orders History</a>
       <hr/>
-			<a href="index.html">Logout</a>
+			<a href="../../index.html">Logout</a>
     </div>
+
   </div>
-
-      <a href="#contact">Hello: Refuge Wise</a>
-      <a href="delivery_price.html">Prices</a>
-      
-
-</div>
-
+  <a href="#contact">Hello: Refuge Wise</a>
+  </div>
+  
 <div class="contianer">
   <div class="new_delivery">
     <h1>New Delivery Orders</h1>
-    <form action="new_delivery.html">
+    <form id='post' action="" method='post'>
       <input type="text" placeholder="From......" required>
       <input type="text" placeholder="To........" required>
       <input type="number" placeholder="Weight" required>
@@ -40,5 +37,6 @@
   </div>
 </div>
 
+  <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
 </html> 
