--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>SendIT</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div class="top">
-<img src="img/delivery.png">
+<img src="../img/delivery.png">
 
  <div class="dropdown">
     <button class="dropbtn">Delivery Order Menu
