Post transport services and reteive data

--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -32,67 +32,13 @@
 " id="myBtn">Create Price</button></td>
 <h1>Parcel prices</h1> 
 
+
+<h3 id="msgerror"></h3>
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
-
-<table id="NewTable">
-  <tr class="header">
-    <th style="width:30%;">From</th>
-    <th style="width:30%;">To</th>
-    <th style="width:30%;">Price</th>
-    <th style="width:30%;"></th>
+  <div id="shows">
 
 
-
-  </tr>
-  <tr>
-    <td>Nairobi</td>
-    <td>Kisumu</td>
-    <td>2500</td>
-
-  <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
- 
-
-
-
-
-  </tr>
-  <tr>
-  
-    <td>Nakuru</td>
-    <td>Mombasa</td>
-    <td>3600</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-
-
-
-  </tr>
-  <tr>
-
-    <td>Busia</td>
-    <td>Kakamega</td>
-    <td>2000</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-
-
-  </tr>
-  <tr>
-
-    <td>Kisi</td>
-    <td>Nairobi</td>
-    <td>1500</td>
-   <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-
-
-  </tr>
-</table> 
+  </div>
 </div>
 
 
