Create send parcels

--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -27,6 +27,9 @@
   <a href="all_users.html">All Users</a><br/>
   <a href="delivery_orders.html">Delivery Orders</a><br/>
   <a href="history_orders.html">Orders History</a><br/>
+  <a href="#">InTransit</a><br/>
+  <a href="#">Delivered</a><br/>
+  <a href="#">Canceled</a><br/>
 </div>
 
 <div class="main">
