--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -61,6 +61,28 @@
   </div>
 
 </div>
+
+<div id="myModal1" class="modal1">
+
+  Modal content
+  <div class="modal-content1">
+    <span class="close1">&times;</span>
+    <h3 id="msge"></h3>
+    <h1>Update</h1>
+    <form name="create" id="prices">
+      <input type="text" name="car_number" placeholder="Car Number">
+      <input type="text" name="from_location" placeholder="From......">
+      <input type="text" name="to_location" placeholder="To........">
+      <input type="number" name="price" placeholder="price">
+      <input type="time" name="day_time">
+      <button type='submit' id="submit">Update price</button>
+
+      <div id="editor"></div>    
+    </form>
+<br/>
+  </div>
+</div>
+
 <script src="../js/script.js"></script>
 <script src="../js/create_price.js"></script>
 </body>
