--- a/UI/pages/dashboard.html
+++ b/UI/pages/dashboard.html
@@ -22,8 +22,11 @@
 
   </div>
   <a href="#contact">Hello: Refuge Wise</a>
+
+  <a href="send.html">Send parcel</a>
+
   </div>
-  
+
 <div class="contianer">
   <div class="new_delivery">
     <h1>New Delivery Orders</h1>
@@ -36,6 +39,11 @@
 
   </div>
 </div>
+
+
+
+</div>
+<script src="../js/script.js"></script>
 
   <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
 </body>
