Retriving data from endpoint

--- a/UI/pages/history-delivery.html
+++ b/UI/pages/history-delivery.html
@@ -31,57 +31,9 @@
 <h1>History Deliveries</h1>
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
-
-<table id="NewTable">
-  <tr class="header">
-    <th style="width:20%;">Date</th>
-    <th style="width:25%;">Deliveries</th>
-    <th style="width:25%;">From</th>
-    <th style="width:25%;">To</th>
-    <th style="width:30%;"></th>
-
-
-
-
-  </tr>
-  <tr>
-    <td>2018/08/10</td>
-    <td>Tv</td>
-    <td>Nairobi</td>
-    <td>Kisumu</td>
-     <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">Remove</button></td>
-
-
-
-  </tr>
-  <tr>
-    <td>2018/19/08</td>
-    <td>Laptops</td>
-    <td>Nakuru</td>
-    <td>Mombasa</td>
-     <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">Remove</button></td>
-
-
-  </tr>
-  <tr>
-    <td>2018/30/10</td>
-    <td>package</td>
-    <td>Busia</td>
-    <td>Kakamega</td>
-     <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">Remove</button></td>
-
-  </tr>
-  <tr>
-    <td>2018/01/12</td>
-    <td>Tables</td>
-    <td>Kisi</td>
-    <td>Nairobi</td>
-     <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">Remove</button></td>
-
-  </tr>
-</table> 
+<div id="history"></div>
 </div>
-
-<script src="js/script.js"></script>
+<script src="../js/user_history_deliveries.js"></script>
+<!-- <script src="../js/script.js"></script> -->
 </body>
 </html> 
