--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -29,93 +29,52 @@
 </div>
 <br/><br/>
 <div class="contianer">
-<a href="new_delivery.html">New Delivery</a>
+<a href="new_delivery.html">My Deliveries Orders</a>
 <br/><br/>
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
 
-<table id="NewTable">
-  <tr class="header">
-    <th style="width:20%;">Date</th>
-    <th style="width:25%;">Deliveries</th>
-    <th style="width:30%;">From</th>
-    <th style="width:30%;">To</th>
-    <th style="width:30%;"></th>
-    <th style="width:30%;"></th>
+   <div id="sendthis"></div>
 
-
-
-  </tr>
-  <tr>
-    <td>2018/08/10</td>
-    <td>Tv</td>
-    <td>Nairobi</td>
-    <td>Kisumu</td>
-
-  <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-  <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">cancel</button></td>
-
-
-
-
-  </tr>
-  <tr>
-    <td>2018/19/08</td>
-    <td>Laptops</td>
-    <td>Nakuru</td>
-    <td>Mombasa</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-  <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">cancel</button></td>
-
-
-  </tr>
-  <tr>
-    <td>2018/30/10</td>
-    <td>package</td>
-    <td>Busia</td>
-    <td>Kakamega</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-  <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">cancel</button></td>
-
-  </tr>
-  <tr>
-    <td>2018/01/12</td>
-    <td>Tables</td>
-    <td>Kisi</td>
-    <td>Nairobi</td>
-   <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Update</button></td>
-
-  <td><button style="color: #ffffff; background-color:#ff4444; font-size: 18px;  border: none;">cancel</button></td>
-
-  </tr>
-</table> 
 </div>
 
 
-<div id="myModal" class="modal">
+<div id="myModal2" class="modal2">
 
   <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-          <h1>Update Orders</h1>
+  <div class="modal-content2">
+      <div id="sendthis"></div>
 
-    <form action="my_order.html">
-      <input type="text" placeholder="Nairobi" required>
-      <input type="text" placeholder="Kisumu" required>
-      <button type='submit'>Update</button>
+    <span class="close2">&times;</span>
+          <h1>Update Orders</h1>
+          <h3 id="change"></h3>
+    <input type="text" name="destination" id ="destination"/>
+      <div id="editor"></div>
+
     </form>
 <br/>
   </div>
 
 </div>
-<script src="js/script.js"></script>
+<script>
+    var modal2 = document.getElementById('myModal2');
+    var btn2 = document.getElementById("myBtn2");
+    var span2 = document.getElementsByClassName("close")[0];
+    btn.onclick = function() {
+        modal2.style.display = "block";
+    }
+    span2.onclick = function() {
+        modal2.style.display = "none";
+    }
+    window.onclick = function(event) {
+        if (event.target == modal2) {
+            modal2.style.display = "none";
+        }
+    }
+
+</script>
+<!-- <script src="../js/script.js"></script> -->
+<script src="../js/veiw.js"></script>
 
 </body>
 </html> 
