--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -48,7 +48,8 @@
     <span class="close2">&times;</span>
           <h1>Update Orders</h1>
           <h3 id="change"></h3>
-    <input type="text" name="destination" id ="destination"/>
+          <h5 class="modalText" id = "destination"></h5><p class="modalText" id ="single"></p>
+
       <div id="editor"></div>
 
     </form>
