--- a/UI/pages/delivery_orders.html
+++ b/UI/pages/delivery_orders.html
@@ -28,90 +28,49 @@
 <h1>Deliveries Orders</h1>
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
+<div id="histories"></div>
 
-<table id="NewTable">
-  <tr class="header">
-    <th style="width:20%;">Date</th>
-    <th style="width:20%;">User</th>
-    <th style="width:25%;">Deliveries</th>
-    <th style="width:30%;">From</th>
-    <th style="width:30%;">To</th>
-    <th style="width:30%;"></th>
-
-
-
-  </tr>
-  <tr>
-    <td>2018/08/10</td>
-    <td>Homie</td>
-    <td>Tv</td>
-    <td>Nairobi</td>
-    <td>Kisumu</td>
-
-  <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-" id="myBtn">Change</button></td>
-
-
-
-
-
-  </tr>
-  <tr>
-    <td>2018/19/08</td>
-    <td>musa</td>
-    <td>Laptops</td>
-    <td>Nakuru</td>
-    <td>Mombasa</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-">Change</button></td>
-
-
-
-
-  </tr>
-  <tr>
-    <td>2018/30/10</td>
-    <td>Wise</td>
-    <td>package</td>
-    <td>Busia</td>
-    <td>Kakamega</td>
- <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-">Change</button></td>
-
-
-  </tr>
-  <tr>
-    <td>2018/01/12</td>
-    <td>Refuge</td>
-    <td>Tables</td>
-    <td>Kisi</td>
-    <td>Nairobi</td>
-   <td><button style="color: #ffffff; background-color:#00C851; font-size: 18px;  border: none;
-">Change</button></td>
-
-
-
-  </tr>
-</table> 
 </div>
 
-<div id="myModal" class="modal">
+
+<div id="myModal2" class="modal2">
 
   <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-          <h1 style="text-align: center; font-size: 25px;">Change Orders</h1>
+  <div class="modal-content2">
+      <div id="sendthis"></div>
 
-    <form  action="delivery_orders.html">
-      <input type="text" placeholder="Nairobi" required>
-      <input type="text" placeholder="Kisumu" required>
-      <button type='submit'>Change</button>
+    <span class="close2">&times;</span>
+          <h1>Change Status </h1>
+          <h3 id="change"></h3>
+          <h5 class="modalText" id = "status"></h5><p class="modalText" id ="single"></p>
+
+      <div id="editor"></div>
+
     </form>
 <br/>
   </div>
 
 </div>
+<script>
+    var modal2 = document.getElementById('myModal2');
+    var btn2 = document.getElementById("myBtn2");
+    var span2 = document.getElementsByClassName("close")[0];
+    btn.onclick = function() {
+        modal2.style.display = "block";
+    }
+    span2.onclick = function() {
+        modal2.style.display = "none";
+    }
+    window.onclick = function(event) {
+        if (event.target == modal2) {
+            modal2.style.display = "none";
+        }
+    }
+</script>
+
+
 <script src="../js/script.js"></script>
+<script src="../js/delivery_admin.js"></script>
 
 </body>
 </html> 
