--- a/UI/pages/dashboard.html
+++ b/UI/pages/dashboard.html
@@ -14,8 +14,9 @@
     <div class="dropdown-content">
       <a href="new_delivery.html">New Delivery</a>
       <a href="profile.html">Profile</a>
-      <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">Orders History</a>
+      <a href="book.html">Bookings</a>
+      <a href="my_order.html">Delivery Orders</a>
+      <a href="history-delivery.html">Delivery Histories</a>
       <hr/>
 			<a href="../../index.html">Logout</a>
     </div>
@@ -24,8 +25,7 @@
   <a href="#contact">Hello: Refuge Wise</a>
 
   <a href="send.html">Send parcel</a>
-  <a href="book.html">Book</a>
-  <a href="search.html">Search</a>
+  <a href="search.html">Book</a>
 
 
   </div>
