--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -15,21 +15,23 @@
      <div class="dropdown-content">
       <a href="new_delivery.html">New Delivery</a>
       <a href="profile.html">Profile</a>
-      <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">Orders History</a>
+      <a href="book.html">Bookings</a>
+      <a href="my_order.html">Delivery Orders</a>
+      <a href="history-delivery.html">Delivery Histories</a>
       <hr/>
 			<a href="index.html">Logout</a>
     </div>
   </div>
-    <a href="#contact">Hello: Refuge Wise</a>
+    <a href="dashboard.html">Hello: Refuge Wise</a>
     <a href="delivery_price.html">Prices</a>
+    <a href="send.html">Send Parcel</a>
 
 
 
 </div>
 <br/><br/>
 <div class="contianer">
-<a href="new_delivery.html">My Deliveries Orders</a>
+<a href="send.html">Delivery Histories</a>
 <br/><br/>
 
    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search by Dates..">
