--- a/UI/pages/search.html
+++ b/UI/pages/search.html
@@ -14,8 +14,10 @@
     <div class="dropdown-content">
       <a href="new_delivery.html">New Delivery</a>
       <a href="profile.html">Profile</a>
-      <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">Orders History</a>
+      <a href="book.html">Bookings</a>
+
+      <a href="my_order.html">Delivery Orders</a>
+      <a href="history-delivery.html">Delivery Histories</a>
       <hr/>
 			<a href="../../index.html">Logout</a>
     </div>
@@ -24,13 +26,12 @@
   <a href="dashboard.html">Hello: Refuge Wise</a>
 
   <a href="send.html">Send parcel</a>
-  <a href="book.html">Book</a>
 
   </div>
 
 <div class="contianer">
       <h3 id="reg"></h3>
-    <h1>Search </h1>
+    <h1>Where Do You Want To Go </h1>
     <form name="search" id="searches">
       <input type="text" name="from_location" placeholder="From ........">
       <input type="text" name="to_location" placeholder="To ............">
