--- a/UI/pages/new_delivery.html
+++ b/UI/pages/new_delivery.html
@@ -7,23 +7,26 @@
 <body>
 <div class="top">
 <img src="../img/delivery.png">
- <div class="dropdown">
-    <button class="dropbtn">Delivery Order Menu
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="new_delivery.html">New Delivery</a>
-      <a href="profile.html">Profile</a>
-      <a href="my_order.html">My Orders</a>
-      <a href="history-delivery.html">Orders History</a>
-      <hr/>
-			<a href="index.html">Logout</a>
-    </div>
+<div class="dropdown">
+  <button class="dropbtn">Delivery Order Menu
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-content">
+    <a href="new_delivery.html">New Delivery</a>
+    <a href="profile.html">Profile</a>
+    <a href="book.html">My Bookings</a>
+    <a href="my_order.html">My Orders</a>
+    <a href="history-delivery.html">Orders History</a>
+    <hr/>
+    <a href="../../index.html">Logout</a>
   </div>
 
-      <a href="#contact">Hello: Refuge Wise</a>
-      <a href="delivery_price.html">Prices</a>
-      
+</div>
+<a href="#contact">Hello: Refuge Wise</a>
+
+<a href="send.html">Send parcel</a>
+<a href="search.html">Book</a>
+
 
 </div>
 
