Impliment printing books

--- a/UI/pages/all_users.html
+++ b/UI/pages/all_users.html
@@ -15,8 +15,7 @@
       <a href="#">Profile</a>
   
       <hr/>
-      <a href="index.html">Logout</a>
-    </div>
+      <a onclick="logout()" class="pointer_cursor">Logout</a></div>
   </div>
   <a href="admin_dashboard.html">Back To Admin</a>
 
@@ -25,60 +24,11 @@
   <div class="contianer">
 <h1>All Users </h1>
 
+<div id="shows_user"></div>
 
-<table id="NewTable">
-  <tr class="header">
-    <th style="width:20%;">Firstname</th>
-    <th style="width:25%;">LastName</th>
-    <th style="width:25%;">Username</th>
-    <th style="width:25%;">Phone Number</th>
-    <th style="width:25%;">Email</th>
-
-
-
-
-  </tr>
-  <tr>
-    <td>Homie</td>
-    <td>Musa</td>
-    <td>Wise</td>
-    <td>0724676869</td>
-    <td>homiemusa@gmail.com</td>
-    
-
-
-
-  </tr>
-  <tr>
-    <td>Moses</td>
-    <td>Homie</td>
-    <td>Wise</td>
-    <td>075677890</td>
-    <td>moses@gmail.com</td>
-     
-
-
-  </tr>
-  <tr>
-    <td>Jane</td>
-    <td>Otieno</td>
-    <td>jane</td>
-    <td>078678965</td>
-    <td>janeotieno@gmail.com</td>
-   
-
-  </tr>
-  <tr>
-    <td>Benna</td>
-    <td>Opio</td>
-    <td>Ben</td>
-    <td>074578976</td>
-    <td>Benna@gmail.com</td>
-  
-
-  </tr>
-</table> 
 </div>
 
+<script src="../js/all_us.js"></script>
+<script src="../js/logout.js"></script>
 </body>
 </html> 
