--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -85,7 +85,7 @@ var span1 = document.getElementsByClassName("close1")[0];
 btn1.onclick = function() {
     modal1.style.display = "block";
 }
-span.onclick = function() {
+span8.onclick = function() {
     modal1.style.display = "none";
 }
 window.onclick = function(event) {
