--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -15,7 +15,7 @@
       <a href="#">Profile</a>
 
       <hr/>
-			<a href="index.html">Logout</a>
+			<a href="../../index.html">Logout</a>
     </div>
 
   </div>
