--- a/UI/pages/dates.html
+++ b/UI/pages/dates.html
@@ -15,7 +15,7 @@
       <a href="#">Profile</a>
 
       <hr/>
-			<a href="index.html">Logout</a>
+			<a href="../../index.html">Logout</a>
     </div>
 
   </div>
@@ -28,7 +28,7 @@
     <h3 id="reg"></h3>
   <h1>Search By Date</h1>
   <form name="search" id="searches">
-    <input type="text" name="dates" placeholder="Search By Date">
+    <input type="date" name="dates" placeholder="Search By Date" required>
     <button type='submit' id="submit">Search</button>
   </form>
 </br> 
