--- a/UI/pages/history-delivery.1.html
+++ b/UI/pages/history-delivery.1.html
@@ -17,7 +17,7 @@
       <a href="my_order.html">My Orders</a>
       <a href="history-delivery.html">Orders History</a>
       <hr/>
-			<a href="index.html">Logout</a>
+			<a href="../../index.html">Logout</a>
     </div>
   </div>
       <a href="#contact">Hello: Refuge Wise</a>
