--- a/UI/pages/create_price.html
+++ b/UI/pages/create_price.html
@@ -16,7 +16,7 @@
       <a href="#">Profile</a>
   
       <hr/>
-			<a href="index.html">Logout</a>
+			<a href="../../index.html">Logout</a>
     </div>
 
   </div>
