--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -19,7 +19,7 @@
       <a href="my_order.html">Delivery Orders</a>
       <a href="history-delivery.html">Delivery Histories</a>
       <hr/>
-			<a href="index.html">Logout</a>
+      <a href="../../index.html">Logout</a>
     </div>
   </div>
     <a href="dashboard.html">Hello: Refuge Wise</a>
