--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -28,7 +28,7 @@
   <a href="bookers.html">Search Bookers</a>
   <a href="dates.html">Day's books</a>
   <a href="delivery_orders.html">Delivery Orders</a><br/>
-  <a href="history_orders.html">Orders History</a><br/>
+  <a href="history_orders.html">Bookings Orders</a><br/>
   <a href="intransit.html">InTransit</a><br/>
   <a href="delivered.html">Delivered</a><br/>
   <a href="canlced.html">Canceled</a><br/>
