--- a/UI/pages/history-delivery.1.html
+++ b/UI/pages/history-delivery.1.html
@@ -20,8 +20,8 @@
 			<a href="../../index.html">Logout</a>
     </div>
   </div>
-      <a href="#contact">Hello: Refuge Wise</a>
-      <a href="delivery_price.html">Prices</a>
+  <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
+  <a href="delivery_price.html">Prices</a>
 
 
 
