--- a/UI/pages/my_order.html
+++ b/UI/pages/my_order.html
@@ -22,8 +22,8 @@
       <a href="../../index.html">Logout</a>
     </div>
   </div>
-    <a href="dashboard.html">Hello: Refuge Wise</a>
-    <a href="delivery_price.html">Prices</a>
+  <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
+  <a href="delivery_price.html">Prices</a>
     <a href="send.html">Send Parcel</a>
 
 
