--- a/UI/pages/profile.html
+++ b/UI/pages/profile.html
@@ -22,7 +22,7 @@
         </div>
     
       </div>
-      <a href="#contact">Hello: Refuge Wise</a>
+      <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
     
       <a href="send.html">Send parcel</a>
       <a href="search.html">Book</a>
