--- a/UI/pages/search.html
+++ b/UI/pages/search.html
@@ -23,7 +23,7 @@
     </div>
 
   </div>
-  <a href="dashboard.html">Hello: Refuge Wise</a>
+  <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
 
   <a href="send.html">Send parcel</a>
 
