--- a/UI/pages/dashboard.html
+++ b/UI/pages/dashboard.html
@@ -4,7 +4,7 @@
 	<title>SendIT</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body>
+<body onload="userget()">
 <div class="top">
 <img src="../img/delivery.png">
  <div class="dropdown">
@@ -22,7 +22,7 @@
     </div>
 
   </div>
-  <a href="#contact">Hello: Refuge Wise</a>
+<a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
 
   <a href="send.html">Send parcel</a>
   <a href="search.html">Book</a>
@@ -46,6 +46,7 @@
 
 
 </div>
+<script src="../js/send_parcel.js"></script>
 <script src="../js/script.js"></script>
 
   <iframe src="https://www.google.com/maps/d/embed?mid=1OuXI5fmsHUdCNT4j2QMapfT5tELUAklj" width="1300" height="570"></iframe>
