--- a/UI/pages/send.html
+++ b/UI/pages/send.html
@@ -22,7 +22,7 @@
     </div>
 
   </div>
-  <a href="dashboard.html">Hello: Refuge Wise</a>
+  <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
 
   <a href="send.html">Send parcel</a>
   <a href="search.html">Book</a>
