--- a/UI/pages/delivery_price.html
+++ b/UI/pages/delivery_price.html
@@ -6,7 +6,7 @@
   <title>SendIT</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body>
+<body onload="userget()">
 <div class="top">
 <img src="../img/delivery.png">
  <div class="dropdown">
