--- a/UI/pages/history-delivery.html
+++ b/UI/pages/history-delivery.html
@@ -4,8 +4,8 @@
 	<title>SendIT</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-<body>
-<div class="top">
+<body onload="userget()">
+ <div class="top">
 <img src="../img/delivery.png">
 <div class="dropdown">
   <button class="dropbtn">Delivery Order Menu
